[tool.poetry]
name = "async_intro"
version = "0.1.0"
description = ""
authors = ["kingname <greensouth@foxmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
aiohttp = "^3.6.3"
uvicorn = "^0.12.1"
urllib3 = "^1.25.10"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
